--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                     <option value="63" mode="javascript">JavaScript (Node.js 12.14.0)</option>
                     <option value="78" mode="kotlin">Kotlin (1.3.70)</option>
                     <option value="64" mode="lua">Lua (5.3.5)</option>
+                    <option value="69420" mode="luau">LuaU</option>
                     <option value="1006" mode="c">MPI (OpenRTE 3.1.3) with C (GCC 8.3.0)</option>
                     <option value="1007" mode="cpp">MPI (OpenRTE 3.1.3) with C++ (GCC 8.3.0)</option>
                     <option value="1008" mode="python">MPI (OpenRTE 3.1.3) with Python (3.7.3)</option>
